correct header text overflow

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -383,7 +383,8 @@ width: 85%;
     #div_nav_center {
         height: 77%;
     }
-    #header nav{
+    #header h1{
+        font-size: xx-large;
     }
 }
 @media screen and (max-width:1200px) {
